--- a/template/src/component/styles.scss
+++ b/template/src/component/styles.scss
@@ -1,10 +1,18 @@
-.menu {
-  h1 {
-    color: blue;
-  }
+.font-bold {
+  font-weight: 700;
+}
+
+.title {
+  margin-top: 30px;
+  color: #333;
+  font-size: 12px;
+}
+
+.content {
+  margin: 40px 0;
 }
 
 .red {
-  color: red;
+  color: green;
   transform: translate(0, 0);
 }
